--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^5.12.0",
+        "animate.css": "^3.7.2",
         "axios": "^0.19",
-        "bootstrap": "^4.0.0",
-        "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.13",
-        "popper.js": "^1.12",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.20.1",
-        "sass-loader": "7.*",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
-    }
+        "bootstrap": "^4.4.1",
+        "cross-env": "^6.0",
+        "jquery": "^3.4",
+        "laravel-mix": "^5.0.1",
+        "lodash": "^4.17.15",
+        "popper.js": "^1.16",
+        "resolve-url-loader": "^3.1.1",
+        "sass": "^1.24.0",
+        "sass-loader": "8.*",
+        "vue": "^2.6.11",
+        "vue-template-compiler": "^2.6.11"
+    },
+    "dependencies": {}
 }
