--- a/package.json
+++ b/package.json
@@ -25,5 +25,7 @@
         "vue": "^2.6.11",
         "vue-template-compiler": "^2.6.11"
     },
-    "dependencies": {}
+    "dependencies": {
+        "vue-router": "^3.1.3"
+    }
 }
