--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "watch-poll": "npm run watch -- --watch-poll"
   },
   "dependencies": {
+    "@popperjs/core": "^2.4.0",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.26"
   },
@@ -17,12 +18,10 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "animate.css": "^3.7.2",
     "axios": "^0.19",
-    "bootstrap": "^4.4.1",
-    "cross-env": "^7.0",
+    "cross-env": "^7.0.2",
     "jquery": "^3.5",
     "laravel-mix": "^5.0.4",
     "lodash": "^4.17.15",
-    "popper.js": "^1.16",
     "resolve-url-loader": "^3.1.1",
     "sass": "^1.26.5",
     "sass-loader": "8.*",
